--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47"
       crossorigin="anonymous"
     />
-    <title>CoviData | India</title>
+    <title>JMRD Datia</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/purecss@1.0.1/build/pure-min.css"
@@ -54,8 +54,8 @@
           </div>
           <div class="mobile-button">
             <a
-              href="http://cheeseball.co/covidata/app-release.apk"
-              download="covidata.apk"
+              href="https://drive.google.com/uc?export=download&confirm=K5gl&id=1MGXM-_R89k_I6W19jL8C6XP5UvyQrTvY"
+              download="JMRD.apk"
               class="pure-button pure-button-primary w3-animate-top my-btn"
               ><p class="btn-text">Download APK</p>
               <i class="fa fa-download" style="margin-left: 0.2em;"></i
