--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       >
         <div class="nav-title">
           <div>
-            <img src="./images/CoviData.svg" alt="CoviData" class="logo" />
+            <img src="./images/icon.png" alt="JMRD" class="logo" />
           </div>
           <div>
             <p class="title">
-              CoviData
+              JMRD
             </p>
           </div>
           <div class="mobile-button">
@@ -90,7 +90,7 @@
     <div class="content-wrapper" id="about">
       <div class="content">
         <h2 class="content-head is-center">
-          Why CoviData?
+          JMRD, Datia
         </h2>
 
         <div class="pure-g">
