--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
           <div>
             <img src="./images/icon.png" alt="JMRD" class="logo" />
           </div>
-          <p></p>
           <div>
             <p class="title">
-                  JMRD
+            <h3>   JMRD </h3>
             </p>
           </div>
           <div class="mobile-button">
