--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="splash-container">
       <div class="features">
         <h1 class="main-heading w3-animate-top">
-          Get Real-time COVID-19 Updates on your phone
+          The official APP of JMRD, Datia
         </h1>
         <a
           href="http://cheeseball.co/covidata/app-release.apk"
@@ -97,67 +97,46 @@
           <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead">
               <i class="fa fa-rocket"></i>
-              Real-time Data
+              Attendance
             </h3>
             <p>
-              Get State-wise or total COVID-19 data in real-time on your
-              fingertips. Stay aware, stay safe.
+              View all your attendance here in real tim
             </p>
           </div>
           <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead">
               <i class="fa fa-dashboard"></i>
-              Analytics
+              Assignments
             </h3>
             <p>
-              Get real-time data about how many cases of COVID-19 are active,
-              recovered and the total deaths.
+              Download and submit all your assignments
             </p>
           </div>
           <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead">
               <i class="fa fa-mobile"></i>
-              Dark Theme
+              Virtual Notice Board
             </h3>
             <p>
-              With COVID-19 stressing everyone out, the last thing you want is
-              stress on your eyes, that's why CoviData ships with a dark theme!
+              School and class notice board at a glance
             </p>
           </div>
 
           <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead">
               <i class="fa fa-github"></i>
-              Open Source
+              Doubts
             </h3>
             <p>
-              The complete project is Open Source, the source can be found at
-              <a href="https://github.com/abhishekUpmanyu/covidata_india"
-                >@abhishekUpmanyu/covidata_india</a
-              >
+              Create a doubt and have it solved by your teacher
             </p>
           </div>
         </div>
-        <small
-          style="
-            display: block;
-            width: 100%;
-            text-align: center;
-            margin-top: 0.4em;
-          "
-        >
-          some assets were created with
-          <a href="https://mockuphone.com" target="_blank">MockUPhone</a>
-          <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank"
-            >License</a
-          ></small
-        >
       </div>
-
       <div class="footer is-center">
         <small
           >Website made with <i class="fa fa-heart" aria-hidden="true"></i> by
-          <a href="https://github.com/zaryanz">@zaryanz</a>
+          <a href="https://github.com/Mobae">@Mobae</a>
         </small>
       </div>
     </div>
