--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="footer is-center">
         <small
           >Website made with <i class="fa fa-heart" aria-hidden="true"></i> by
-          <a href="https://github.com/Mobae">@Mobae</a>
+          <a href="https://github.com/Mobae">@Mobae.tech</a>
         </small>
       </div>
     </div>
