--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
             <img src="./images/icon.png" alt="JMRD" class="logo" />
           </div>
           <div>
-            <p class="title">
-            <h3>   JMRD </h3>
-            </p>
+            <img src="./images/jmrd.png" alt="JMRD" class="name" />
           </div>
           <div class="mobile-button">
             <a
