--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img src="./images/icon.png" alt="JMRD" class="logo" />
           </div>
           <div>
-            <img src="./images/jmrd.png" alt="JMRD" class="name" />
+            <img src="./images/jmrd.png" alt="JMRD" class="name" style = height: '20px' />
           </div>
           <div class="mobile-button">
             <a
