--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
       >
         <div class="nav-title">
           <div>
-            <img src="./images/icon.png" alt="JMRD" class="logo" />
+            <img src="./images/icon.png" alt="JMRD" class="logo" style="height: 60px;" />
           </div>
           <div>
-            <img src="./images/jmrd.png" alt="JMRD" class="name" style="height: 20px;" />
+            <img src="./images/jmrd.png" alt="JMRD" class="name" style="height: 80px;" />
           </div>
           <div class="mobile-button">
             <a
