--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="pure-g">
           <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead">
-              <i class="fa fa-rocket"></i>
+              <i class="fa fa-calendar-check-o"></i>
               Attendance
             </h3>
             <p>
@@ -103,7 +103,7 @@
           </div>
           <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead">
-              <i class="fa fa-dashboard"></i>
+              <i class="fa fa-tasks"></i>
               Assignments
             </h3>
             <p>
@@ -112,7 +112,7 @@
           </div>
           <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead">
-              <i class="fa fa-mobile"></i>
+              <i class="fa fa-clipboard"></i>
               Virtual Notice Board
             </h3>
             <p>
@@ -122,7 +122,7 @@
 
           <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead">
-              <i class="fa fa-github"></i>
+              <i class="fa fa-lightbulb-o"></i>
               Doubts
             </h3>
             <p>
