--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="pure-g">
           <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
             <h3 class="content-subhead">
-              <i class="fa fa-calendar-check-o"></i>
+              <i class="fa fa-check-square-o"></i>
               Attendance
             </h3>
             <p>
