--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       </div>
       <div class="mockup w3-container">
         <img
-          src="./images/snaplow.png"
-          alt="CoviData"
+          src="./images/splash.png"
+          alt="JMRD"
           class="phone-mockup w3-animate-top"
         />
       </div>
