--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
       <div class="mockup w3-container">
         <img
-          src="./images/splash.png"
+          src="./images/snaplow.png"
           alt="JMRD"
           class="phone-mockup w3-animate-top"
         />
