--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               Attendance
             </h3>
             <p>
-              View all your attendance here in real tim
+              View all your attendance here in real time
             </p>
           </div>
           <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
