--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A mobile app for real-time COVID-19 updates"
+      content="Official app of JMRD, Datia"
     />
     <link
       rel="stylesheet"
