--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="mobile-button">
             <a
-              href="https://drive.google.com/uc?export=download&confirm=K5gl&id=1MGXM-_R89k_I6W19jL8C6XP5UvyQrTvY"
+              href="http://143.110.186.227/public/JMRD-App.apk"
               download="JMRD.apk"
               class="pure-button pure-button-primary w3-animate-top my-btn"
               ><p class="btn-text">Download APK</p>
@@ -69,8 +69,8 @@
           The official APP of JMRD, Datia
         </h1>
         <a
-          href="http://cheeseball.co/covidata/app-release.apk"
-          download="covidata.apk"
+          href="http://143.110.186.227/public/JMRD-App.apk"
+          download="JMRD.apk"
           class="pure-button pure-button-primary w3-animate-top"
           ><p class="btn-text">Download APK</p>
           <i class="fa fa-download" style="margin-left: 0.2em;"></i
